# cookiecutter-python-devcontainer-plainpy

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.directory_name}}/: .envrc  .gitignore  README.md  pyproject.toml
{{cookiecutter.directory_name}}/.config/: .bashrc  flake8.ini  isort.cfg  mypi.ini  pylintrc  pytest.integration.ini  pytest.unit.ini
{{cookiecutter.directory_name}}/.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
